k8s/admin-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: admin-front
  name: admin-front
  namespace: "%NAMESPACE%"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: admin-front
    spec:
      containers:
        - image: "%REGISTRY%/rfid-admin-front:latest"
          imagePullPolicy: Always
          name: admin-front
          resources: {}
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: admin-front
  name: admin-front
  namespace: "%NAMESPACE%"
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: admin-front
  type: LoadBalancer
status:
  loadBalancer: {}
