k8s/db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: postgres
  name: postgres
  namespace: rfid-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgres
    spec:
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: rfid-db
      containers:
        - image: postgres:%PG_VERSION%
          name: postgres
          resources: {}
          volumeMounts:
          - name: db-data
            mountPath: "/var/lib/postgresql/data"
          ports:
            - containerPort: 5432
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: postgres
  name: db
  namespace: rfid-main
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: postgres
  name: db-np
  namespace: rfid-main
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
  type: NodePort
status:
  loadBalancer: {}
