k8s/front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: front
  name: front
  namespace: "%NAMESPACE%"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: front
    spec:
      containers:
        - image: "%REGISTRY%/rfidio-front:latest"
          imagePullPolicy: Always
          name: front
          resources: {}
          ports:
            - containerPort: 80
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: front
  name: front
  namespace: "%NAMESPACE%"
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: front
  type: LoadBalancer
status:
  loadBalancer: {}
