k8s/rabbit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rabbit
  name: rabbit
namespace: "%NAMESPACE%"
spec:
replicas: 1
selector:
  matchLabels:
    app: rabbit
strategy: {}
template:
  metadata:
    creationTimestamp: null
    labels:
      app: rabbit
  spec:
    containers:
      - image: rabbitmq:3.13.6-management
        name: rabbit
        resources: {}
        ports:
          - containerPort: 5432
          - containerPort: 15672
status: {}
---
apiVersion: v1
kind: Service
metadata:
creationTimestamp: null
labels:
  app: rabbit
name: mq
namespace: "%NAMESPACE%"
spec:
  ports:
    - port: 5672
      protocol: TCP
      targetPort: 5672
  selector:
    app: rabbit
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rabbit
  name: mq-management
  namespace: "%NAMESPACE%"
spec:
  ports:
    - port:
      protocol: TCP
      targetPort: 15672
  selector:
    app: rabbit
  type: LoadBalancer
status:
  loadBalancer: {}
