k8s/external.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: external
  name: external
  namespace: rfid-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: external
    spec:
      containers:
        - image: localhost:32000/rfidio-external:latest
          imagePullPolicy: Always
          name: external
          resources: {}
          ports:
            - containerPort: 8000
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: external
  name: external
  namespace: rfid-main
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: external
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  namespace: rfid-main
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /external-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: external
                port:
                  number: 8000
