k8s/ingress-domain.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-front-ingress
  namespace: rfid-main
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "%DOMAIN%"
      http:
        paths:
          - path: /admin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-front
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: rfid-main
spec:
  rules:
    - host: "admin.%DOMAIN%"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-api
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: rfid-main
spec:
  rules:
    - host: "auth.%DOMAIN%"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  namespace: rfid-main
spec:
  rules:
    - host: "external.%DOMAIN%"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: rfid-main
  annotations:
spec:
  rules:
    - host: "%DOMAIN%"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbit-ingress
  namespace: rfid-main
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "%DOMAIN%"
      http:
        paths:
          - path: /rabbit-admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mq-management
                port:
                  number: 8000
