k8s/tenant.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tenant
  name: tenant
  namespace: "%NAMESPACE%"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tenant
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tenant
    spec:
      containers:
        - image: "%REGISTRY%/rfidio-tenant:latest"
          imagePullPolicy: Always
          name: tenant
          resources: {}
          ports:
            - containerPort: 8000
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tenant
  name: tenant
  namespace: "%NAMESPACE%"
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: tenant
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  namespace: "%NAMESPACE%"
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /tenant-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tenant
                port:
                  number: 8000
